<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="100dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/tarang"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tarang"
        android:textColor="#9575CD"
        android:textSize="54sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:text="test@example.com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="phone"
        android:background="@drawable/input_shape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editPassword"
        android:text="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_shape"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_gravity="center"
            />
        <ProgressBar
            android:id="@+id/pgrLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:id="@+id/container"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:paddingLeft="@dimen/fragment_horizontal_margin"-->
    <!--    android:paddingTop="@dimen/fragment_vertical_margin"-->
    <!--    android:paddingRight="@dimen/fragment_horizontal_margin"-->
    <!--    android:paddingBottom="@dimen/fragment_vertical_margin"-->
    <!--    tools:context="com.example.booktarang.fragments.LoginFragment"-->
    <!--    android:orientation="vertical"-->
    <!--    >-->

    <!--&lt;!&ndash;    <ImageView&ndash;&gt;-->
    <!--&lt;!&ndash;        android:id="@+id/logo"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_width="0dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_height="158dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginStart="100dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginTop="80dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginEnd="100dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:srcCompat="@drawable/logo"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:contentDescription="@string/tarang"/>&ndash;&gt;-->

    <!--    <TextView-->
    <!--        android:id="@+id/welcome"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="@string/welcome_to"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="34sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/logo"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/logo"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/logo" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/tarang"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/tarang"-->
    <!--        android:textColor="#9575CD"-->
    <!--        android:textSize="54sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/welcome"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/welcome"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/welcome" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editTextEmail"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:layout_marginEnd="24dp"-->
    <!--        android:autofillHints="phone"-->
    <!--        android:background="@drawable/input_shape"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/email"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:padding="16dp"-->
    <!--        android:textColorHint="#757575"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tarang" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editPassword"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:autofillHints="password"-->
    <!--        android:background="@drawable/input_shape"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/password"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:padding="16dp"-->
    <!--        android:textColorHint="#757575"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/editTextEmail"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />-->


    <!--    <Button-->
    <!--        android:id="@+id/btnLogin"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:background="@drawable/button_shape"-->
    <!--        android:text="@string/signup"-->
    <!--        android:textColor="@color/white"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/editPassword"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/editPassword"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editPassword" />-->

    <!--    <FrameLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content">-->

    <!--    </FrameLayout>-->
    <!--&lt;!&ndash;    <TextView&ndash;&gt;-->
    <!--&lt;!&ndash;        android:id="@+id/already_acc"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_width="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginBottom="16dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:text="@string/already_have"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintEnd_toEndOf="@+id/signup"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintHorizontal_bias="0.372"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintStart_toStartOf="@+id/signup" />&ndash;&gt;-->

    <!--&lt;!&ndash;    <Button&ndash;&gt;-->
    <!--&lt;!&ndash;        android:id="@+id/signin_btn"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_width="50dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_height="48dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginStart="2dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:layout_marginBottom="10dp"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:background="@color/background"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:text="@string/signin"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:textColor="#D81B60"&ndash;&gt;-->
    <!--&lt;!&ndash;        android:textSize="12sp"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
    <!--&lt;!&ndash;        app:layout_constraintStart_toEndOf="@+id/already_acc" />&ndash;&gt;-->
    <!--</LinearLayout>-->